--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -1,3 +1,5 @@
+import com.android.build.gradle.internal.tasks.FinalizeBundleTask
+
 apply plugin: 'com.android.application'
 
 android {
@@ -47,6 +49,12 @@ android {
             if (buildType == 'release') {
                 outputFileName = "${appName}-${version}${ext}"
             }
+        }
+
+        tasks.named("sign${variant.name.capitalize()}Bundle", FinalizeBundleTask) {
+            File file = finalBundleFile.asFile.get()
+            File finalFile = new File(file.parentFile, "${appName}-${version}.aab")
+            finalBundleFile.set(finalFile)
         }
     }
 }
