--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -52,9 +52,11 @@ android {
         }
 
         tasks.named("sign${variant.name.capitalize()}Bundle", FinalizeBundleTask) {
-            File file = finalBundleFile.asFile.get()
-            File finalFile = new File(file.parentFile, "${appName}-${version}.aab")
-            finalBundleFile.set(finalFile)
+            if (variant.name == "release") {
+                File file = finalBundleFile.asFile.get()
+                File finalFile = new File(file.parentFile, "${appName}-${version}.aab")
+                finalBundleFile.set(finalFile)
+            }
         }
     }
 }
