--- a/.github/workflows/installer-android.yml
+++ b/.github/workflows/installer-android.yml
@@ -27,14 +27,6 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4
 
-    - uses: nttld/setup-ndk@v1
-      id: setup-ndk
-      with:
-        ndk-version: r28c
-        add-to-path: true
-        link-to-sdk: true
-        local-cache: true
-
     - run: cd app/build; sh mustang-brand.sh
     - run: cd app; yarn install
     - run: cd lib; yarn install
@@ -44,6 +36,7 @@ jobs:
     - run: cd mobile; yarn build
       env:
         MOBILE_ARCH: 'android-arm64'
+        ANDROID_NDK_HOME: ${{ env.ANDROID_NDK_LATEST_HOME }}
 
     - run: |
         mkdir -p ${{ github.workspace }}/private_keys/
@@ -55,7 +48,7 @@ jobs:
         KEYSTORE_PASS: ${{ secrets.KEYSTORE_PASS }}
         KEYSTORE_ALIAS: ${{ secrets.KEYSTORE_ALIAS }}
         KEYSTORE_ALIAS_PASS: ${{ secrets.KEYSTORE_ALIAS_PASS }}
-        ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
+        ANDROID_NDK_HOME: ${{ env.ANDROID_NDK_LATEST_HOME }}
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
