Change to all projects

--- a/mobile/android/build.gradle
+++ b/mobile/android/build.gradle
@@ -23,7 +23,7 @@ allprojects {
     }
 }
 
-subprojects {
+allprojects {
     afterEvaluate { project ->
         if (project.hasProperty("android")) {
             project.android {
