--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,6 +7,7 @@
     "start": "vite",
     "start:android": "cap run android",
     "start:ios": "cap run ios",
+    "update:android": "cap update android",
     "build": "./build.sh",
     "build:android": "npm run build:android:apk && npm run build:android:aab",
     "build:android:apk": "cap sync android && cd android && ./gradlew --configuration-cache assembleRelease",
