Don't write key to workspace

--- a/.github/workflows/installer-android.yml
+++ b/.github/workflows/installer-android.yml
@@ -43,11 +43,10 @@ jobs:
 
     - run: |
         mkdir -p ${{ github.workspace }}/private_keys/
-        echo '${{ secrets.KEYSTORE }}' | base64 --decode > ${{ github.workspace }}/private_keys/key.jks
+        echo '${{ secrets.KEYSTORE }}' | base64 --decode > ~/private_keys/key.jks
 
-    - run: cd mobile; yarn build:android
+    - run: cd mobile; export KEYSTORE_PATH=~/private_keys/key.jks; yarn build:android
       env:
-        KEYSTORE_PATH: ${{ github.workspace }}/private_keys/key.jks
         KEYSTORE_PASS: ${{ secrets.KEYSTORE_PASS }}
         KEYSTORE_ALIAS: ${{ secrets.KEYSTORE_ALIAS }}
         KEYSTORE_ALIAS_PASS: ${{ secrets.KEYSTORE_ALIAS_PASS }}
