--- a/.github/workflows/installer-android.yml
+++ b/.github/workflows/installer-android.yml
@@ -42,7 +42,7 @@ jobs:
         MOBILE_ARCH: 'android-arm64'
 
     - run: |
-        mkdir -p ${{ github.workspace }}/private_keys/
+        mkdir -p ~/private_keys/
         echo '${{ secrets.KEYSTORE }}' | base64 --decode > ~/private_keys/key.jks
 
     - run: cd mobile; export KEYSTORE_PATH=~/private_keys/key.jks; yarn build:android
