Android: ndkVersion and CMake version consistency

--- a/mobile/android/build.gradle
+++ b/mobile/android/build.gradle
@@ -22,6 +22,27 @@ allprojects {
         google()
         mavenCentral()
     }
+    afterEvaluate { project ->
+        if (project.hasProperty("android")) {
+            project.android {
+                ndkVersion rootProject.ext.ndkVersion
+                externalNativeBuild {
+                    cmake {
+                        version rootProject.ext.cmakeVersion
+                    }
+                }
+            }
+            if (project?.android?.defaultConfig?.hasProperty("externalNativeBuild")) {
+                project.android.defaultConfig {
+                    externalNativeBuild {
+                        cmake {
+                            version rootProject.ext.cmakeVersion
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 task clean(type: Delete) {
