Set debuggable true for debug build

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -34,6 +34,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            debuggable true
+        }
     }
     def appName = "mustang"
     def version = android.defaultConfig.versionName
