--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -1,3 +1,5 @@
+import com.android.build.gradle.internal.tasks.FinalizeBundleTask
+
 apply plugin: 'com.android.application'
 
 android {
@@ -43,8 +45,14 @@ android {
             def ext = output.outputFile.name.endsWith('.apk') ? '.apk' : '.aab'
             if (buildType == 'release') {
                 outputFileName = "${appName}-${version}${ext}"
-            } else if (buildType == 'debug') {
-                outputFileName = "${appName}-${version}-debug${ext}"
+            }
+        }
+
+        tasks.named("sign${variant.name.capitalize()}Bundle", FinalizeBundleTask) {
+            if (variant.name == "release") {
+                File file = finalBundleFile.asFile.get()
+                File finalFile = new File(file.parentFile, "${appName}-${version}.aab")
+                finalBundleFile.set(finalFile)
             }
         }
     }
