--- a/mobile/package.json
+++ b/mobile/package.json
@@ -7,6 +7,7 @@
     "start": "vite",
     "start:android": "cap run android",
     "start:ios": "cap run ios",
+    "brand:parula": "./hooks/common/parula-brand.sh",
     "build": "./hooks/common/build.sh",
     "build:android": "npm run build:android:apk && npm run build:android:aab",
     "build:android:apk": "export MOBILE_ARCH=android-arm64; npm run build && cap sync android && cd android && ./gradlew --configuration-cache assembleRelease",
