Add @capacitor/app to dependencies

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@capacitor/android": "^7.0.0",
+    "@capacitor/app": "^7.0.2",
     "@capacitor/camera": "^7.0.0",
     "@capacitor/core": "^7.0.0",
     "@capacitor/ios": "^7.0.0",
