--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,8 @@
     "l10n:sync:translations": "cd l10n && crowdin pull"
   },
   "dependencies": {
+    "@capacitor/app": "^7.0.2",
+    "@capacitor/core": "^7.0.0",
     "@faker-js/faker": "^9.8.0",
     "@popperjs/core": "^2.11.8",
     "@sentry/svelte": "^8.15.0",
