--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -8,6 +8,10 @@
     "module": "ESNext",
     "resolveJsonModule": true,
     /**
+     * Extra type checking that's not turned on by default.
+     */
+    "noImplicitThis": true,
+    /**
      * Typecheck JS in `.svelte` and `.js` files by default.
      * Disable checkJs if you'd like to use dynamic types in JS.
      * Note that setting allowJs false does not prevent the use
