--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^7.0.0",
+    "@tsconfig/node22": "^22.0.2",
     "typescript": "^5.9.2",
     "vite": "^5.4.2",
     "vite-node": "^3.2.4"
