--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "@tsconfig/node22/tsconfig.json"
+  "extends": "@tsconfig/node22/tsconfig.json",
+  "compilerOptions": {
+    "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true,
+    "declaration": true
+  }
 }
