--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -11,6 +11,7 @@
      * Extra type checking that's not turned on by default.
      */
     "noImplicitThis": true,
+    "strictFunctionTypes": true,
     /**
      * Typecheck JS in `.svelte` and `.js` files by default.
      * Disable checkJs if you'd like to use dynamic types in JS.
