--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,8 +13,7 @@
     "build:android:apk": "export MOBILE_ARCH=android-arm64; npm run build && cap sync android && cd android && ./gradlew --configuration-cache assembleRelease",
     "build:android:aab": "export MOBILE_ARCH=android-arm64; npm run build && cap sync android && cd android && ./gradlew --configuration-cache :app:bundleRelease",
     "preview": "vite preview",
-    "setup:ios": "cd ios && ./setup-ios.sh",
-    "capacitor:update:before": "vite-node ./hooks/android/update-project.ts"
+    "setup:ios": "cd ios && ./setup-ios.sh"
   },
   "dependencies": {
     "@capacitor/android": "^7.0.0",
