--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "@capacitor/app": "^7.0.2",
     "@capacitor/camera": "^7.0.0",
     "@capacitor/core": "^7.0.0",
+    "@capacitor/file-viewer": "^1.0.4",
     "@capacitor/ios": "^7.0.0",
     "@capacitor/splash-screen": "^7.0.0",
     "@capawesome/capacitor-android-edge-to-edge-support": "^7.2.3",
