--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@capacitor/app": "^7.0.2",
     "@capacitor/core": "^7.0.0",
+    "@capacitor/filesystem": "^7.1.4",
     "@faker-js/faker": "^9.8.0",
     "@popperjs/core": "^2.11.8",
     "@sentry/svelte": "^8.15.0",
