--- a/mobile/backend/package.json
+++ b/mobile/backend/package.json
@@ -21,6 +21,7 @@
     "ky": "^1.2.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.13",
+    "tsdav": "^2.1.5",
     "vite-plugin-static-copy": "^2.3.1",
     "ws": "^8.16.0"
   },
