--- a/mobile/android/variables.gradle
+++ b/mobile/android/variables.gradle
@@ -15,4 +15,5 @@ ext {
     androidxJunitVersion = '1.2.1'
     androidxEspressoCoreVersion = '3.6.1'
     cordovaAndroidVersion = '10.1.1'
+    androidxBrowserVersion = '1.8.0'
 }
