--- a/.github/workflows/installer-ios.yml
+++ b/.github/workflows/installer-ios.yml
@@ -5,3 +5,29 @@ on:
   push:
     tags: 'v*'
 
+env:
+  XCODE_VERSION: 16.4
+
+jobs:
+  build:
+    runs-on: macos-15
+    permissions:
+      contents: write
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+          node-version: 24.x
+
+      - run: xcode-select -s /Applications/Xcode_${{ env.XCODE_VERSION }}.app
+
+      - run: cd app/build; sh mustang-brand.sh
+      - run: cd app; yarn install
+      - run: cd lib; yarn install
+      - run: cd backend; yarn install
+      - run: cd mobile; yarn install
+      - run: cd mobile/backend; yarn install
+      - run: cd mobile; yarn build
+          
