--- a/.github/workflows/installer-ios.yml
+++ b/.github/workflows/installer-ios.yml
@@ -6,11 +6,11 @@ on:
     tags: 'v*'
 
 env:
-  XCODE_VERSION: 16.4
+  XCODE_VERSION: 26
 
 jobs:
   build:
-    runs-on: macos-15
+    runs-on: macos-26
     permissions:
       contents: write
 
@@ -59,5 +59,4 @@ jobs:
       - run: cd backend; yarn install
       - run: cd mobile; yarn install
       - run: cd mobile/backend; yarn install
-      - run: cd mobile; yarn build
-          
+      - run: cd mobile; yarn build:ios
