--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "build:android": "npm run build:android:apk && npm run build:android:aab",
     "build:android:apk": "export MOBILE_ARCH=android-arm64; npm run build && cap sync android && cd android && ./gradlew assembleRelease",
     "build:android:aab": "export MOBILE_ARCH=android-arm64; npm run build && cap sync android && cd android && ./gradlew :app:bundleRelease",
+    "build:ios": "export MOBILE_ARCH=ios-arm64; npm run build && cap sync ios && cap build ios",
     "preview": "vite preview",
     "setup:ios": "bash ./hooks/ios/setup.sh"
   },
