--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
 }
 
 apply from: 'capacitor.build.gradle'
+apply plugin: 'org.jetbrains.kotlin.android'
 
 try {
     def servicesJSON = file('google-services.json')
