Set AndroidCoreKTX version

--- a/mobile/android/variables.gradle
+++ b/mobile/android/variables.gradle
@@ -8,6 +8,7 @@ ext {
     androidxAppCompatVersion = '1.7.0'
     androidxCoordinatorLayoutVersion = '1.2.0'
     androidxCoreVersion = '1.15.0'
+    androidxCoreKtxVersion = '1.17.0'
     androidxFragmentVersion = '1.8.4'
     coreSplashScreenVersion = '1.0.1'
     androidxWebkitVersion = '1.12.1'
