Use rootProject Cmake version

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -6,7 +6,7 @@ android {
     externalNativeBuild {
         cmake {
             path file('CMakeLists.txt')
-            version '3.22.1'
+            version rootProject.ext.cmakeVersion
         }
     }
     namespace "im.mustang.capa"
