Update iOS build process for manual signing

--- a/.github/workflows/installer-ios.yml
+++ b/.github/workflows/installer-ios.yml
@@ -59,4 +59,7 @@ jobs:
       - run: cd backend; yarn install
       - run: cd mobile; yarn install
       - run: cd mobile/backend; yarn install
-      - run: cd mobile; yarn build:ios
+      - run: cd mobile; yarn build:ios:release
+        env:
+          IOS_CERTIFICATE_NAME: ${{ secrets.IOS_CERTIFICATE_NAME }}
+          IOS_PROVISIONING_PROFILE_NAME: ${{ secrets.IOS_PROVISIONING_PROFILE_NAME }}
