--- a/.github/workflows/installer-ios.yml
+++ b/.github/workflows/installer-ios.yml
@@ -63,3 +63,10 @@ jobs:
         env:
           IOS_CERTIFICATE_NAME: ${{ secrets.IOS_CERTIFICATE_NAME }}
           IOS_PROVISIONING_PROFILE_NAME: ${{ secrets.IOS_PROVISIONING_PROFILE_NAME }}
+
+      - name: Upload IPA
+        uses: actions/upload-artifact@v4
+        with:
+          name: mustang.ipa
+          path: |
+            mobile/ios/App/output/*.ipa
