--- a/.github/workflows/installer-ios-parula.yml
+++ b/.github/workflows/installer-ios-parula.yml
@@ -27,12 +27,11 @@ jobs:
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE }}
           P12_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.IOS_PROVISION_PROFILE }}
-          KEYCHAIN_PASSWORD: ${{ secrets.IOS_PROVISION_PROFILE_PASSWORD }}
+          KEYCHAIN_PASSWORD: "aZ5h+WENka7bVmHQ0H1bNg=="
+
         run: |
           # create variables
           CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
           KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
 
           # import certificate
