--- a/.github/workflows/installer-ios-parula.yml
+++ b/.github/workflows/installer-ios-parula.yml
@@ -27,7 +27,6 @@ jobs:
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE }}
           P12_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-          KEYCHAIN_PASSWORD: "aZ5h+WENka7bVmHQ0H1bNg=="
 
         run: |
           # create variables
@@ -36,6 +35,8 @@ jobs:
 
           # import certificate
           echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+          # generate random keychain password
+          export KEYCHAIN_PASSWORD=$(openssl rand -base64 16)
 
           # create temporary keychain
           security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
