iOS: Node.js 24 (#893)
* Update setup script
* Add iOS libnode link
* Zip file name and remove uneccessary step
* Remove node-fetch
* Update Podfile
* Copy Node Native modules
* Code Sign Node Native Modules
* Target node24
* Copy Node Native Script
* Npm build script
* Document build process
* Add docs about project indexing
* Create Scheme
* Code sign and copy node native modules
* Exceptions for embedding
* Move to code sign script to its own file
* Remove copy node natives phase
* Exclude simulator also
* Change reference to Framework
* Place IOS_LIBNODE in a separate file
* Document changes

--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -11,5 +11,7 @@ android/app/debug/
 !build.sh
 !parula-brand.sh
 NodeMobile.xcframework
-!setup-ios.sh
+!setup.sh
+!xcode-codesign.sh
+!variables.sh
 backend/nodejs-assets
