--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,8 +12,9 @@
     "build:android": "npm run build:android:apk && npm run build:android:aab",
     "build:android:apk": "export MOBILE_ARCH=android-arm64; npm run build && cap sync android && cd android && ./gradlew assembleRelease",
     "build:android:aab": "export MOBILE_ARCH=android-arm64; npm run build && cap sync android && cd android && ./gradlew :app:bundleRelease",
+    "build:ios": "export MOBILE_ARCH=ios-arm64; npm run build && cap sync ios && cap build ios",
     "preview": "vite preview",
-    "setup:ios": "cd ios && ./setup-ios.sh"
+    "setup:ios": "bash ./hooks/ios/setup.sh"
   },
   "dependencies": {
     "@capacitor/android": "^7.0.0",
