--- a/mobile/ios/archive.plist
+++ b/mobile/ios/archive.plist
@@ -2,12 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<key>method</key>
-<string>app-store</string>
-<key>provisioningProfiles</key>
-<dict>
-    <key>im.mustang.mail</key>
-    <string>Mustang Mail</string>
-</dict>
+	<key>method</key>
+	<string>app-store-connect</string>
+	<key>provisioningProfiles</key>
+	<dict>
+		<key>im.mustang.mail</key>
+		<string>Mustang</string>
+	</dict>
 </dict>
 </plist>
