--- a/.github/workflows/installer-ios-parula.yml
+++ b/.github/workflows/installer-ios-parula.yml
@@ -52,12 +52,10 @@ jobs:
       - run: cd mobile; yarn install
       - run: cd mobile/backend; yarn install
       - run: cd mobile; yarn build:ios:release
-        env:
-          IOS_CERTIFICATE_OWNER_NAME: ${{ secrets.IOS_CERTIFICATE_OWNER_NAME }}
 
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
           name: parula.ipa
           path: |
-            mobile/ios/App/output/*.ipa
+            mobile/output/**.ipa
