--- a/.github/workflows/installer-ios.yml
+++ b/.github/workflows/installer-ios.yml
@@ -58,3 +58,24 @@ jobs:
           name: mustang.ipa
           path: |
             mobile/output/**.ipa
+
+      - name: Set version from package.json
+        run: |
+          cd mobile
+          VERSION=$(jq -r '.version' package.json)
+          echo "APP_VERSION=v$VERSION" >> $GITHUB_ENV
+
+      - name: Upload to GitHub release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ env.APP_VERSION }}
+          files: |
+            mobile/output/**.ipa
+
+      - name: 'Upload app to TestFlight'
+        uses: apple-actions/upload-testflight-build@v3
+        with:
+          app-path: 'mobile/output/**.ipa'
+          issuer-id: ${{ secrets.APPLE_API_ISSUER }}
+          api-key-id: ${{ secrets.APPLE_API_KEY_ID }}
+          api-private-key: ${{ secrets.APPLE_API_KEY }}
