--- a/.github/workflows/installer-ios.yml
+++ b/.github/workflows/installer-ios.yml
@@ -76,6 +76,6 @@ jobs:
         uses: apple-actions/upload-testflight-build@v3
         with:
           app-path: 'mobile/output/**.ipa'
-          issuer-id: ${{ secrets.APPLE_API_ISSUER }}
-          api-key-id: ${{ secrets.APPLE_API_KEY_ID }}
-          api-private-key: ${{ secrets.APPLE_API_KEY }}
+          issuer-id: ${{ secrets.IOS_APPSTORE_API_ISSUER }}
+          api-key-id: ${{ secrets.IOS_APPSTORE_API_KEY_ID }}
+          api-private-key: ${{ secrets.IOS_APPSTORE_API_KEY }}
