--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@capacitor/app": "^7.0.2",
     "@capacitor/browser": "^7.0.2",
     "@capacitor/core": "^7.0.0",
+    "@capacitor/filesystem": "^7.1.4",
     "@capacitor/splash-screen": "^7.0.3",
     "@faker-js/faker": "^9.8.0",
     "@popperjs/core": "^2.11.8",
