--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,6 +23,7 @@
     "@capacitor/browser": "^7.0.2",
     "@capacitor/camera": "^7.0.0",
     "@capacitor/core": "^7.0.0",
+    "@capacitor/filesystem": "^7.1.4",
     "@capacitor/ios": "^7.0.0",
     "@capacitor/splash-screen": "^7.0.3",
     "@capawesome/capacitor-android-edge-to-edge-support": "^7.2.3",
