Adjust message to end user, not Apple review staff

--- a/mobile/ios/App/App/Info.plist
+++ b/mobile/ios/App/App/Info.plist
@@ -38,7 +38,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>The camera allows users to take a photo for their avatar.</string>
 	<key>NSLocalNetworkUsageDescription</key>
-	<string>The app frontend needs to communicate with a local backend via WebSocket for mail synchronization, storage and other tasks. We want the app to run entirely local without any cloud service, that's why the service runs locally on the device.</string>
+	<string>This is required for the app to work. The user interface of the app needs to communicate with a local backend part via WebSocket for mail synchronization, storage and other tasks. We want the app to run entirely locally on your device, without any cloud service, that's why the service runs locally on the device.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>The photo library (add only) is used to save photos taken by users for their avatar.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
