Adjust messages to end user, because I saw the message as tester during approval

--- a/mobile/ios/App/App/Info.plist
+++ b/mobile/ios/App/App/Info.plist
@@ -40,9 +40,9 @@
 	<key>NSLocalNetworkUsageDescription</key>
 	<string>This is required for the app to work. The user interface of the app needs to communicate with a local backend part via WebSocket for mail synchronization, storage and other tasks. We want the app to run entirely locally on your device, without any cloud service, that's why the service runs locally on the device.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>The photo library (add only) is used to save photos taken by users for their avatar.</string>
+	<string>We save your photos received or made from chats, emails, files, or avatars.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>The photo library is used for the user to pick a photo as their avatar.</string>
+	<string>You can choose a photo as your avatar, or to send to others as chat, email or file.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
