iOS: Build Node Natives as Frameworks (#917)
* Convert .node to .framework
* Sign Node Native modules
* Get the node path
* Fix building iOS Framework
* Preload override script
* Fix path
* Add docs
* Delete framework from their build paths
* Use the correct path
* Upgrade min OS version to 14.0
* Rename to embed
* Format docs
* Replace var with let/const
* Add copyright information

--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -12,6 +12,6 @@ android/app/debug/
 !parula-brand.sh
 NodeMobile.xcframework
 !setup.sh
-!xcode-codesign.sh
+!xcode-embed-node-native.sh
 !variables.sh
 backend/nodejs-assets
