Revert "Matrix: Remove Matrix SDK imports, savin 9 MB of JS, or 60% of our app size"
This reverts commit 452f74bab7530b17f56931da91fe0ed4cf80e215.

--- a/app/package.json
+++ b/app/package.json
@@ -52,6 +52,8 @@
     "lowlight": "^3.1.0",
     "lucide-svelte": "^0.525.0",
     "markdown-it": "^14.1.0",
+    "matrix-js-sdk": "^30.0.1",
+    "olm": "https://packages.matrix.org/npm/olm/olm-3.2.1.tgz",
     "password-salt": "^5.0.1",
     "pkce-challenge": "^4.1.0",
     "postal-mime": "^2.4.3",
