--- a/mobile/android/app/src/main/cpp/CMakeLists.txt
+++ b/mobile/android/app/src/main/cpp/CMakeLists.txt
@@ -57,10 +57,10 @@ target_link_libraries( # Specifies the target library.
 
         # Links the target library to the log library
         # included in the NDK.
-        log-lib
+        log
 
         libnode
 
         # Links the target library to the log library
         # included in the NDK.
-        ${log-lib} )
+        ${log})
