--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,8 +10,8 @@
     "brand:parula": "./hooks/common/parula-brand.sh",
     "build": "./hooks/common/build.sh",
     "build:android": "npm run build:android:apk && npm run build:android:aab",
-    "build:android:apk": "export MOBILE_ARCH=android-arm64; npm run build && cap sync android && cd android && ./gradlew assembleRelease",
-    "build:android:aab": "export MOBILE_ARCH=android-arm64; npm run build && cap sync android && cd android && ./gradlew :app:bundleRelease",
+    "build:android:apk": "cd android && ./scripts/build.sh && ./gradlew assembleRelease",
+    "build:android:aab": "cd android && ./scripts/build.sh && ./gradlew :app:bundleRelease",
     "build:ios:release": "export MOBILE_ARCH=ios-arm64; cd ios && bash ./build/build.sh",
     "build:ios": "export MOBILE_ARCH=ios-arm64; (cd ios && bash ./build/build.sh) && cap sync ios && cap build ios",
     "preview": "vite preview",
