--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "0.9.8"
+        versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
              // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
@@ -50,7 +50,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    def appName = "Mustang"
+    def appName = "mustang"
     def version = android.defaultConfig.versionName
 
     applicationVariants.all { variant ->
@@ -94,7 +94,6 @@ dependencies {
 }
 
 apply from: 'capacitor.build.gradle'
-apply plugin: 'org.jetbrains.kotlin.android'
 
 try {
     def servicesJSON = file('google-services.json')
