--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -32,6 +32,9 @@ android {
                 cppFlags ''
             }
         }
+        ndk {
+            abiFilters 'arm64-v8a'
+        }
     }
     signingConfigs {
         release {
