--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -30,6 +30,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags ''
+                arguments "-DANDROID_STL=c++_shared", "-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON"
             }
         }
         ndk {
