Only upload to GitHub Releases if it's a release

--- a/.github/workflows/installer-ios-parula.yml
+++ b/.github/workflows/installer-ios-parula.yml
@@ -83,6 +83,7 @@ jobs:
 
       - name: Upload to GitHub release
         uses: softprops/action-gh-release@v2
+        if: env.RELEASE == 'true'
         with:
           tag_name: ${{ env.APP_VERSION }}
           files: ${{ env.IPA_FILE_PATH }}
