--- a/.github/workflows/installer-android-parula.yml
+++ b/.github/workflows/installer-android-parula.yml
@@ -75,6 +75,7 @@ jobs:
 
     - name: Upload to GitHub release
       uses: softprops/action-gh-release@v2
+      if: env.RELEASE == 'true'
       with:
         tag_name: ${{ env.APP_VERSION }}
         files: |
