--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,6 +29,7 @@
     "@capacitor/splash-screen": "^7.0.3",
     "@capacitor/status-bar": "^7.0.3",
     "@capawesome/capacitor-android-edge-to-edge-support": "^7.2.3",
+    "@capgo/inappbrowser": "^8.0.1",
     "capacitor-nodejs": "https://github.com/mustang-im/capacitor-nodejs/releases/download/1.0.0-beta.10/capacitor-nodejs-v1.0.0-beta.10.tgz"
   },
   "devDependencies": {
