--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@radically-straightforward/sqlite": "^1.0.0",
     "@types/nodemailer": "^6.4.14",
     "adm-zip": "^0.5.12",
+    "better-sqlite3": "^12.6.2",
     "bufferutil": "^4.0.8",
     "des.js": "^1.0.1",
     "electron-updater": "^6.6.2",
@@ -15,8 +16,6 @@
     "js-md4": "^0.3.2",
     "ky": "^1.2.3",
     "nodemailer": "^6.9.13",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
     "tsdav": "^2.1.4",
     "utf-8-validate": "^6.0.3",
     "ws": "^8.16.0"
